--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
         class="aspect-h-4 aspect-w-3 hidden overflow-hidden rounded-lg lg:block"
       >
         <img
-          src="img/photos/1.JPG"
-          alt="Two each of gray, white, and black shirts laying flat."
+          src="img/photos/1.jpg"
+          alt=""
           class="h-full w-full object-cover object-center"
         />
       </div>
       <div class="hidden lg:grid lg:grid-cols-1 lg:gap-y-8">
         <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
           <img
-            src="img/photos/2.JPG"
-            alt="Model wearing plain black basic tee."
+            src="img/photos/2.jpg"
+            alt=""
             class="h-full w-full object-cover object-center"
           />
         </div>
         <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
           <img
-            src="img/photos/3.JPG"
-            alt="Model wearing plain gray basic tee."
+            src="img/photos/3.jpg"
+            alt=""
             class="h-full w-full object-cover object-center"
           />
         </div>
@@ -70,8 +70,8 @@
         class="aspect-h-5 aspect-w-4 lg:aspect-h-4 lg:aspect-w-3 sm:overflow-hidden sm:rounded-lg"
       >
         <img
-          src="img/photos/5.JPG"
-          alt="Model wearing plain white basic tee."
+          src="img/photos/5.jpg"
+          alt=""
           class="h-full w-full object-cover object-center"
         />
       </div>
@@ -122,12 +122,11 @@
                   Prazer, eu sou o Vinícius, mais conhecido como Saturno.
                 </h2>
                 <p
-                  class="relative mt-6 text-lg leading-8 text-gray-200 sm:max-w-md lg:max-w-none"
-                >
+                  class="relative mt-6 text-lg leading-8 text-gray-200 sm:max-w-md lg:max-w-none">
                   Fotografar é algo que sempre foi presente na minha vida, gosto
                   de capturar os momentos e a beleza de cada coisa, por mais
-                  simples que seja. A cada clique é uma oportunidade de
-                  mostrar o mundo de uma pesperctiva única e artística.
+                  simples que seja. A cada clique é uma oportunidade de mostrar
+                  o mundo de uma pesperctiva única e artística.
                 </p>
               </div>
               <div
@@ -184,7 +183,7 @@
                   </div>
                   <div class="relative">
                     <img
-                      src="img/photos/13.jpg"
+                      src="img/photos/13.JPG"
                       alt=""
                       class="aspect-[2/3] w-full rounded-xl bg-gray-900/5 object-cover shadow-lg"
                     />
